--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,25 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: "Roboto Mono", ui-monospace, Menlo, Monaco, "Cascadia Mono",
+    "Segoe UI Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace",
+    "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
+  --primary: #5845ee;
+  --primary-complementary: #f1f3fa;
+  --text-primary: #282b30;
+  --text-secondary: #566072;
+  --text-tertiary: #9ba1ab;
+  --bg-primary: #fff;
+  --bg-secondary: #f8fafb;
+  --bg-tertiary: #f1f4f6;
+  --border-color: #eaeff7;
+
+  --danger: #c95151;
+  --danger-secondary: #f1b0b0;
+  --danger-tertiary: #f3d3d3;
+
+  --bg: #eee;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -42,6 +57,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --bg: #111;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
@@ -83,16 +99,12 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--bg-tertiary);
 }
 
 a {
