--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
     "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --primary: #5845ee;
+  --primary-tertiary: #eeecfa;
   --primary-complementary: #f1f3fa;
   --text-primary: #282b30;
   --text-secondary: #566072;
@@ -16,8 +17,8 @@
   --border-color: #eaeff7;
 
   --danger: #c95151;
-  --danger-secondary: #f1b0b0;
-  --danger-tertiary: #f3d3d3;
+  --danger-secondary: #f9d3d3;
+  --danger-tertiary: #f8e0e0;
 
   --bg: #eee;
   --foreground-rgb: 0, 0, 0;
@@ -100,6 +101,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   height: 100%;
+  font-size: 16px;
 }
 
 body {
